--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,5 +23,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "create-react-class": "^15.6.3"
+  }
 }
