--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -23,7 +23,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd /my-app
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Test app build
+      working-directory: ./my-app
+      run: |
+        npm install
+        npm build
+        npm test
