--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -10,7 +10,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+       run:
+         working-directory: ./my-app/
     strategy:
       matrix:
         node-version: [14.x]
