--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        # cache-dependency-path: /my-app/package-lock.json
+        cache-dependency-path: /my-app/package-lock.json
     - name: Test Login Service
       working-directory: ./my-app
       run: |
