--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -1,34 +1,28 @@
-name: Build and Test
+name: Build & Test
 
 on:
-  push:
-    branches: [ "master" ]
+  push: 
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
-  build:
-
+  build_test:
     runs-on: ubuntu-latest
-    defaults:
-       run:
-         working-directory: ./my-app/
+
     strategy:
       matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [14.x, 16.x, 18.x]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: /my-app/package-lock.json
-    - name: Test Login Service
-      working-directory: ./my-app
-      run: |
-        npm install
-        npm build
-        npm test
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Test Login Service
+        working-directory: ./my-app
+        run: |
+          npm install
+          npm test
