--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -24,5 +24,5 @@ jobs:
       - name: build and test
         working-directory: ./my-app
         run: |
-          npm install
+          npm ci
           npm build
