--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [18.x]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -22,4 +22,4 @@ jobs:
         working-directory: ./my-app
         run: |
           npm install
-          npm build
+          CI=false npm run build
