--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker tag transition_app ${{ env.ECR_REPOSITORY }}/transition_app:$(date +%s)
+          docker tag transition_app ${{ env.ECR_REPOSITORY }}/transition_website:$(date +%s)
 
       - name: Push Docker image to ECR Public
         run: |
-          docker push ${{ env.ECR_REPOSITORY }}/transition_app:$(date +%s)
+          docker push ${{ env.ECR_REPOSITORY }}/transition_website:$(date +%s)
