--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,30 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker tag transition_app ${{ env.ECR_REPOSITORY }}/transition_website:transition_frontend_$(date +%s)
+          docker tag transition_app ${{ env.ECR_REPOSITORY }}/transition_website:transition_frontend_${{ github.sha }}
 
       - name: Push Docker image to ECR Public
         run: |
-          docker push ${{ env.ECR_REPOSITORY }}/transition_website:transition_frontend_$(date +%s)
+          docker push ${{ env.ECR_REPOSITORY }}/transition_website:transition_frontend_${{ github.sha }}
+
+
+      - name: Update ECS frontend app service
+        run: |
+          aws ecs update-service \
+            --cluster MyEcsCluster \
+            --service frontend_service \
+            --force-new-deployment \
+            --image ${{ env.ECR_REPOSITORY }}/transition_website:transition_frontend_${{ github.sha }}
+
+      - name: Rollback on failure (Go back to previous commit)
+        if: failure()
+        run: |
+          # Get the previous GitHub SHA
+          PREVIOUS_SHA=$(git rev-parse HEAD^)
+
+          # Update ECS service with the previous SHA
+          aws ecs update-service \
+            --cluster MyEcsCluster \
+            --service frontend_service \
+            --force-new-deployment \
+            --image ${{ env.ECR_REPOSITORY }}/transition_website:transition_frontend_${PREVIOUS_SHA}
