--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ env:
   CONTAINER_NAME:
     transition_frontend # set this to the name of the container in the
     # containerDefinitions section of your task definition
+  SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
 
 permissions:
   contents: read
@@ -36,6 +37,12 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Notify start deploying process
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_MESSAGE: "Start the building process :rocket:"
+          SLACK_TITLE: Build Start
 
       - name: Build and tag the Docker images
         working-directory: ./my-app
@@ -69,4 +76,11 @@ jobs:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: ${{ env.ECS_SERVICE }}
           cluster: ${{ env.ECS_CLUSTER }}
-          # wait-for-service-stability: true
+          wait-for-service-stability: true
+
+      - name: Notify in slack when deployed into steady state
+        uses: rtCamp/action-slack-notify@v2
+        if: success()
+        env:
+          SLACK_MESSAGE: "sucessfully deployed onto ecs service and a steady state :rocket:"
+          SLACK_TITLE: Success
