--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^16.6.3",
     "react-cookie": "^3.0.8",
     "react-dom": "^16.6.3",
+    "react-jwt": "^1.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^5.0.1"
   },
