--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.3",
     "react-cookie": "^3.0.8",
     "react-dom": "^16.6.3",
+    "react-google-button": "^0.7.2",
     "react-jwt": "^1.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^5.0.1"
