--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
     "axios": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
-    "react": "^16.6.3",
-    "react-cookie": "^3.0.8",
-    "react-dom": "^16.6.3",
+    "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-jwt": "^1.2.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
+    "validator": "^13.9.0",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +36,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "create-react-class": "^15.6.3"
+    "create-react-class": "^15.7.0"
   }
 }
