--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,7 +8,9 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "axios": "^1.4.0",
+    "html2pdf.js": "^0.9.0",
     "jsonwebtoken": "^9.0.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
